Revision 4. Updated page block view settings to prevent horizontal scrolling.

--- a/blocks/page.css
+++ b/blocks/page.css
@@ -1,17 +1,10 @@
 .page {
   background-color: #fcf5e5;
-  height: 100vh;
-  width: 100vw;
+  min-height: 100vh;
+  width: 100%;
 }
 
 .page__section {
   max-width: 1280px;
   margin: 0 auto;
-}
-
-@media screen and (max-width: 627px) {
-  .page {
-    width: 100%;
-    height: 100%;
-  }
 }
